<resources>
    <string name="app_name">"BMI "</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="BMICALCULATOR">BMI CALCULATOR</string>
    <string name="weight">Enter Weight</string>
    <string name="radio3">centimetres</string>
    <string name="radio4">Inches</string>
    <string name="height">Enter Height</string>
    <string name="radio2">kilograms</string>
    <string name="radio1">pounds</string>
    <string name="button1">CALCULATE BMI</string>
    <string name="radio6">centimetres</string>
    <string name="radio7">inches</string>
    <string name="radio5">kilograms</string>
    <string name="radio8">pound</string>
</resources>
